--- a/main.html
+++ b/main.html
@@ -4,12 +4,11 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-</head>
-
 <body>
 <h1>Hello World </h1>
 <h2>Introduction the Accio Ipsum</h2>
-	<p>Accio ipsum dolor sit amet , jion course , solve assignments, get placed above 5 lpa and live life king size</p>
+	<p>Accio ipsum dolor sit amet , jion course , solve assignments, get placed above 
+		5 lpa and live life king size.</p>
 
 	
 	<!-- the entire body must be written by student -->
@@ -17,5 +16,5 @@
 </script>
 
 </body>
-
+</head>
 </html>
