--- a/main.html
+++ b/main.html
@@ -4,17 +4,10 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	</head>
 <body>
 <h1>Hello World</h1>
 <h2>Introduction the Accio Ipsum</h2>
-	<p>Accio ipsum dolor sit amet , join course , solve assignments, get placed above 
-		5 lpa and live life king size.</p>
-
-	
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<p>Accio ipsum dolor sit amet, join course, solve assignments, get placed above 5 lpa and live life king size.</p>
 </body>
-</head>
 </html>
